--- a/app/assets/styles/main.scss
+++ b/app/assets/styles/main.scss
@@ -1,1 +1,8 @@
 @import "~bootstrap/scss/bootstrap";
+@import url('https://fonts.googleapis.com/css?family=Fira+Mono:400,500|Fira+Sans:300,400,700');
+
+@import "common/_colors";
+@import "common/_base";
+@import "common/_text";
+
+@import "layouts/_sidebar";
