Include new SASS partials

--- a/app/assets/styles/main.scss
+++ b/app/assets/styles/main.scss
@@ -5,4 +5,7 @@
 @import "common/_base";
 @import "common/_text";
 
-@import "layouts/_sidebar";
+@import "layouts/_pillars";
+
+@import "components/_avatar";
+@import "components/_badges";
