--- a/app/assets/styles/layouts/_pillars.scss
+++ b/app/assets/styles/layouts/_pillars.scss
@@ -1,10 +1,9 @@
 @include media-breakpoint-up(lg) {
   main {
     padding-left: 2rem !important;
+    border-left: 2px solid #424242;
   }
   .sidebar {
     padding-right: 2rem;
-    border-bottom: 0;
-    border-right: 2px solid #424242;
   }
 }
