Include new partials in main SASS

--- a/app/assets/styles/main.scss
+++ b/app/assets/styles/main.scss
@@ -6,6 +6,8 @@
 @import "common/_text";
 
 @import "layouts/_pillars";
+@import "layouts/_sections";
 
 @import "components/_avatar";
 @import "components/_badges";
+@import "components/_separator";
