--- a/src/assets/styles/layouts/_pillars.scss
+++ b/src/assets/styles/layouts/_pillars.scss
@@ -1,7 +1,7 @@
 @include media-breakpoint-up(lg) {
   main {
     padding-left: 2rem !important;
-    border-left: 2px solid #424242;
+    border-left: 2px solid rgba(255, 255, 255, 0.05);
   }
   .sidebar {
     padding-right: 2rem;
