--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -9,5 +9,8 @@
 @import "layouts/_sections";
 
 @import "components/_avatar";
+@import "components/_buttons";
 @import "components/_badges";
+@import "components/_nav";
 @import "components/_separator";
+@import "components/_typist";
