--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -9,6 +9,7 @@
 @import "layouts/_sections";
 
 @import "components/_avatar";
+@import "components/forms";
 @import "components/_buttons";
 @import "components/_badges";
 @import "components/_nav";
