Switch to white theme

--- a/src/assets/styles/common/_text.scss
+++ b/src/assets/styles/common/_text.scss
@@ -1,13 +1,13 @@
 body {
   font-family: 'Fira Mono', monospace;
-  color: #fff;
+  color: #000;
 }
 h1, h2, h3, h4, h5, h6 {
   font-family: 'Fira Sans', sans-serif;
   font-weight: 300;
 }
 p {
-  color: #fff;
+  color: #000;
 }
 p strong {
   font-weight: 500;
