Add phase figures to Requirements page

--- a/src/assets/styles/common/_base.scss
+++ b/src/assets/styles/common/_base.scss
@@ -5,3 +5,14 @@ li {
     padding-top: 10px;
     padding-bottom: 10px;
 }
+.figure {
+    padding-top: 30px;
+    padding-bottom: 30px;
+    padding-left: 30px;
+}
+.lead {
+    padding-top: 30px;
+}
+figcaption {
+    padding-left: 50px;
+}
